# rusmol

./: .gitignore  BENCHMARK.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MANUAL.md  PLAN.QUALITY.md  PLAN.md  README.md  VERSION.md
src/: app.rs  cli.rs  docktrace.rs  main.rs
src/command/: executor.rs  mod.rs  parser.rs  prompt.rs  selection.rs
src/render/: ball_stick.rs  camera.rs  mod.rs  picker.rs  ribbon.rs  state.rs  surface.rs  uniform.rs
src/render/shaders/: bloom_blur.wgsl  bloom_down.wgsl  cylinder.wgsl  depth_resolve.wgsl  impostor.wgsl  main.wgsl  pick.wgsl  pick_impostor.wgsl  post.wgsl  ribbon.wgsl  shadow_cylinder.wgsl  shadow_impostor.wgsl  shadow_mesh.wgsl  ssao.wgsl  ssao_blur.wgsl  surface.wgsl
src/scene/: mod.rs  object.rs
src/structure/: atom.rs  bonds.rs  ccd.rs  dssp.rs  mod.rs  pdb.rs  rings.rs  secondary.rs
src/util/: color.rs
tests/dock_trace/: 1lpz.tpe_fast.trace  ligand.pdbqt  receptor.pdbqt
tests/dock_trace/old/: 1lpz.tpe.trace  1lpz.tpe_fast.trace
