[package]
name = "rusmol"
version = "0.3.0"
edition = "2021"

[dependencies]
wgpu = "24"
winit = "0.30"
pollster = "0.4"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
rustyline = "15"
nom = "7"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
crossbeam-channel = "0.5"
ureq = "2"
glyphon = "0.8"
indexmap = "2"
rayon = "1"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 8