[package]
name = "rusmol"
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
authors = ["Takashi Ishida <takashi.ishida@gmail.com>"]
description = "A Rust-based lightweight molecular structure viewer for proteins and nucleic acids, with a PyMOL-compatible command set and wgpu (Metal/Vulkan) rendering."
readme = "README.md"
repository = "https://github.com/ishida-titech/rusmol"
homepage = "https://github.com/ishida-titech/rusmol"
license = "MIT OR Apache-2.0"
keywords = ["molecular", "visualization", "pdb", "bioinformatics", "wgpu"]
categories = ["science", "visualization", "command-line-utilities"]
exclude = ["/assets", "/tests", "/dev", "/.github"]

[dependencies]
wgpu = "24"
winit = "0.30"
pollster = "0.4"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
rustyline = "15"
nom = "7"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
crossbeam-channel = "0.5"
ureq = "2"
indexmap = "2"
rayon = "1"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 8